A basic implementation that doesn't work.

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div>
     <h2>Welcome</h2>
-    <form action="/enter-chat" method="POST">
+    <form action="/choose-username" method="POST">
         {% if error %}
             <p>{{ error }}</p>
         {% endif %}
