--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,12 @@
     <body>
         <main class="container">
             <header>
-                <h1>Cringe Chat</h1>
+                <h1><a href="/">Cringe Chat</a></h1>
             </header>
 
+            <div id="body-content">
             {% block content %}{% endblock %}
+            </div>
         </main>
 
         {% block scripts %}{% endblock %}
