Use broker and fix redirection with htmx

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -108,6 +108,7 @@ const displayChatForm = (recipient) => {
 
 
     websocket.onmessage = (event) => {
+        console.log('chat onmessage', event);
         const data = JSON.parse(event.data);
 
         if (data['type'] === 'error') {
@@ -145,6 +146,7 @@ const displayChatForm = (recipient) => {
 }
 
 websocket.onmessage = (event) => {
+    console.log('global onmessage', event);
     const data = JSON.parse(event.data);
 
     if (data['type'] === 'error') {
