--- a/templates/base.html
+++ b/templates/base.html
@@ -17,11 +17,10 @@
                 <h1><a href="/">Cringe Chat</a></h1>
             </header>
 
-            <div id="body-content">
             {% block content %}{% endblock %}
-            </div>
         </main>
 
+        <script src="https://unpkg.com/htmx.org@1.9.10"></script>
         {% block scripts %}{% endblock %}
     </body>
 </html>
