--- a/templates/htmx/chat.html
+++ b/templates/htmx/chat.html
@@ -1,10 +1,13 @@
-<div>
-    <h2>Hello {{ username }}</h2>
-    <h3>You are talking to {{ recipient }}</h3>
-    <div id="messages"></div>
-    <form hx-post="/send-message" hx-target="#messages" hx-swap"beforeend">
-        <input type="text" name="message" id="message" placeholder="Message" />
-        <input type="hidden" name="encoded_username" value="{{encoded_username}}" />
-        <input type="submit" value="Send" />
-    </form>
+<div id="page-content" hx-swap-oob="true">
+  <h1>Chat with {{recipient}}</h1>
+  <div id="messages"></div>
+  <form
+    hx-post="/send-message"
+    hx-swap="none"
+    hx-on::after-request=" if(event.detail.successful) this.reset()"
+  >
+    <input type="text" name="message" id="message" placeholder="Message" />
+    <input type="hidden" name="encoded_username" value="{{encoded_username}}" />
+    <input type="submit" value="Send" />
+  </form>
 </div>
