Fix encoded username for recipient

--- a/templates/htmx/recipient-message.html
+++ b/templates/htmx/recipient-message.html
@@ -1,5 +1,5 @@
 <div hx-swap-oob="beforeend:#messages">
-  <article style="background: #dbeafe; text-align: right">
+  <article>
     <em data-role="time">{{ time.strftime('%H:%M:%S') }}</em>
     <div data-role="message">{{ message }}</div>
   </article>
