--- a/templates/htmx/recipient-message.html
+++ b/templates/htmx/recipient-message.html
@@ -1,6 +1,56 @@
 <div hx-swap-oob="beforeend:#messages">
   <article>
     <em data-role="time">{{ time.strftime('%H:%M:%S') }}</em>
-    <div data-role="message">{{ message }}</div>
+    <div>
+      <span></span>
+      <script>
+          {
+          const spanElement =
+            document.currentScript.parentElement.querySelector('span');
+          const currentScript = document.currentScript;
+          const replayText = (element, values) => {
+            element.textContent = '';
+            const printingStart = new Date();
+
+            let localInterval = setInterval(() => {
+              const timePassed = new Date() - printingStart;
+
+              const value = values.shift();
+
+              if (!value) {
+                clearInterval(localInterval);
+                currentScript.remove();
+
+                return;
+              }
+
+              if (value.t > timePassed) {
+                values.unshift(value);
+
+                return;
+              }
+
+              switch (value.op) {
+                case 'a':
+                  element.textContent = element.textContent + value.v;
+                  break;
+                case 'd':
+                  element.textContent = element.textContent.slice(0, -1);
+                  break;
+                default:
+                  element.textContent = value.v;
+              }
+            }, 20);
+
+            return localInterval;
+          };
+
+          // console.log('{{ values | safe }}');
+
+          const messageValues = {{ values|safe }};
+          replayText(spanElement, messageValues);
+        }
+      </script>
+    </div>
   </article>
 </div>
