--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,7 @@
 
     <title>Cringe Chat</title>
 
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
-    />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <main class="container" hx-ext="ws">
