Vite is working, who would have imagined that

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,8 @@
       {% block content %}{% endblock %}
     </main>
 
+    {% include 'vite_assets.html' %}
+
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
     <script src="https://unpkg.com/htmx.org/dist/ext/debug.js"></script>
