--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,8 @@
 
     <title>Cringe Chat</title>
 
-    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
+  <body class="">
     <main class="container" hx-ext="ws">
       <header>
         <h1><a href="/">Cringe Chat</a></h1>
